# sherlock-grist-to-crm

./: .gitignore  DataParser.py  README.md  README_mapping.md  TODO  TODO.md  cache.py  conf.dist.yaml  conf.py  grist-table-to-json.py  grist_api_helpers.py  install-python-packages.sh  pyproject.toml  script-make-base-sherlock-data.sh  script-make-project-data.sh  script-test-from-grist.sh  script-test-to-prod.sh  script-test.sh  test.py
doc/: mapping.md  script.md
python-packages/grist-api-helpers/: pyproject.toml
python-packages/grist-api-helpers/src/grist_api_helpers/: __init__.py
python-packages/grist-api-helpers/src/grist_api_helpers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python-packages/sherlock-grist-to-crm/: pyproject.toml
python-packages/sherlock-grist-to-crm/src/sherlock_grist_to_crm/: GristDataParser.py  GristMappingData.py  GristRowParser.py  __init__.py  grist-to-crm.py
python-packages/sherlock-grist-to-crm/src/sherlock_grist_to_crm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: make-project-data.sh  make-sherlock-data.sh  user-projects-case.sh
